# running-recipe-chatbot

./: main.py  pyproject.toml
annotation/traces/: trace_20250809_113831_317689.json  trace_20250809_133721_392519.json  trace_20250809_133802_031945.json  trace_20250809_133824_858339.json  trace_20250809_133847_579761.json  trace_20250809_133915_966756.json  trace_20250809_143312_926855.json
backend/: utils.py
data/: sample_queries.csv
homeworks/hw2/: homework_2_solution.ipynb
