[project]
name = "running-recipe-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.4"
dependencies = [
    "fastapi",
    "uvicorn",
    "litellm[proxy]",
    "python-dotenv",
    "httpx",
    "rich",
    "pandas",
    "numpy",
    "scikit-learn",
    "judgy",
    "rank-bm25",
    "tqdm",
    "pydantic",
    "typing-extensions",
    "matplotlib",
    "seaborn",
    "plotly",
    "python-fasthtml",
    "monsterui",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend", "annotation"]

[tool.uv]
dev-dependencies = [
    "ipython>=8.37.0",
]
